# QRNG

./: .gitignore  CLAUDE.md  main.ipynb  pyproject.toml
VarianceData/06_30_2026/run_13_58_28/: sample1.csv  sample2.csv  sample4.csv  sample5.csv  sample6.csv  summary.txt
VarianceData/06_30_2026/run_13_59_56/: sample1.csv  sample2.csv  sample3.csv  sample4.csv  sample5.csv  sample6.csv  summary.txt
VarianceData/06_30_2026/run_14_04_20/: sample1.csv  sample2.csv  sample3.csv  sample4.csv  sample5.csv  sample6.csv  summary.txt
VarianceData/06_30_2026/run_14_06_39/: sample1.csv  sample2.csv  sample3.csv  sample4.csv  sample5.csv  sample6.csv  summary.txt
VarianceData/06_30_2026/run_14_08_22/: sample1.csv  sample2.csv  sample3.csv  sample4.csv  sample5.csv  sample6.csv  summary.txt
VarianceData/06_30_2026/run_14_48_04/: sample1.csv  sample2.csv  sample3.csv  (+4 more)
arduino_handshake/: arduino_handshake.ino
arduino_led/: arduino_led.ino
circuit/: LEDCircuit.asc  circuit.asc  circuit.op.raw  circuit.raw
data/: sample1.csv  sample2.csv  sample3.csv
data/06_25_2026/: run_15_10_37.csv  run_15_12_00.csv  run_15_12_53.csv  run_15_13_02.csv  run_15_14_12.csv  run_15_19_36.csv
data/07_02_2026/: run_12_25_24.csv  run_14_19_50.csv  run_14_22_38.csv  run_14_24_19.csv  run_14_25_16.csv  run_14_28_19.csv  run_15_44_34.csv
data/diagnostic_data/: led_on.csv  no_dac_no_led.csv  no_led.csv
spice/: LEDCircuit.asc  LEDCircuit.op.raw  LEDCircuit.plt  LEDCircuit.raw  LEDCircuit2.asc  LEDCircuit2.op.raw  LEDCircuit2.raw  MCP6001.asy  breadboardCircuit.asc  breadboardCircuit.raw
(+726 files in other folders)
